--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   font-family: 'Inter', sans-serif;
 }
 
+h4 {
+  margin-top:0 ;
+  margin-bottom: 1rem;
+}
+
 .modal {
   height: 75vh;
   width: 75vw;
