--- a/src/App.css
+++ b/src/App.css
@@ -127,6 +127,42 @@ tr{
   width: 65vw;
 }
 
+.tooltip {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  color: #fff
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: auto;
+  font-size: 0.7rem;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 3px;
+  text-decoration: none;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  transition: all 5s ease-in;
+  top: -5px;
+  left: 80%;
+  
+  
+}
+
+.tooltip:hover {
+  transform: scale(1.05);
+}
+
 
 
 @media (prefers-reduced-motion: no-preference) {
