Fix minor UI issues

--- a/src/App.css
+++ b/src/App.css
@@ -189,7 +189,8 @@ tr{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
+  padding-top: 1rem;
   font-size: calc(10px + 2vmin);
   color: white;
 }
