--- a/src/App.css
+++ b/src/App.css
@@ -72,8 +72,24 @@ tr{
   color: white;
   background-color: #282c34;
   border: none;
-
   padding : 1rem;
+}
+
+.github {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  font-size: 1rem;
+  color: white;
+  background-color: #282c34;
+  border: none;
+  z-index: 1;
+
+}
+
+.github:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
 
 .info:hover {
@@ -208,7 +224,6 @@ tr{
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  padding-top: 1rem;
   font-size: calc(10px + 2vmin);
   color: white;
 }
